Diretório das gltf atualizados.

--- a/view/visualization/index.html
+++ b/view/visualization/index.html
@@ -13,9 +13,9 @@
         
         <!-- Objetos -->
         <a-assets>
-            <a-asset-item id="hangar" src="models/hangar/scene.gltf"></a-asset-item>
-            <a-asset-item id="pilar" src="models/pilar/scene.gltf"></a-asset-item>
-            <a-asset-item id="door" src="models/door/scene.gltf"></a-asset-item>
+            <a-asset-item id="hangar" src="../../models/hangar/scene.gltf"></a-asset-item>
+            <a-asset-item id="pilar" src="../../models/pilar/scene.gltf"></a-asset-item>
+            <a-asset-item id="door" src="../../models/door/scene.gltf"></a-asset-item>
         </a-assets>
 
         <!-- Ambiente -->
