--- a/view/visualization/index.html
+++ b/view/visualization/index.html
@@ -19,11 +19,12 @@
         </a-assets>
 
         <!-- Ambiente -->
-        <a-entity environment="preset: forest; ground: flat; dressingAmount: 8; fog: 0.5" scale="0.5 0.5 0.5"position="0 0 0"></a-entity>
+        <a-entity environment="preset: forest; ground: flat; dressingAmount: 8; fog: 0.5; lightPosition: -2 5 -2" scale="0.5 0.5 0.5"position="0 0 0"></a-entity>
 
+        <!-- Modelos -->
         <a-entity gltf-model="#door" scale="0.3 0.3 0.3" position="0 2.7 -5" rotation="-12 -42 0 " color="white"></a-entity>
         <a-entity gltf-model="#pilar" scale="2 2 1" position="0 0 -5"></a-entity>
-        <a-entity gltf-model="#hangar" scale="0.002 0.002 0.002" position="-15 -0.5 5"></a-entity>
+        <a-entity gltf-model="#hangar" scale="0.001 0.001 0.001" position="-7.6 -0.15 3"></a-entity>
         <a-box id=peca_1 position="4 2 -5"></a-box>
         <a-box id=peca_2 position="-3 2 -5"></a-box>
         
