--- a/view/modeling/scene.html
+++ b/view/modeling/scene.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://aframe.io/releases/1.0.3/aframe.min.js"></script>
     <title>Modeling</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
         </a-assets>
 
         <!-- Ambiente -->
-        
+            
     </a-scene>
 </body>
 </html>
