--- a/view/modeling/scene.html
+++ b/view/modeling/scene.html
@@ -1,20 +1,84 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<html>
+  <head>
+    <!-- "bibliotecas" -->
     <script src="https://aframe.io/releases/1.0.3/aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-event-set-component@^4.0.0/dist/aframe-event-set-component.min.js"></script>
+    <script src="https://unpkg.com/aframe-aabb-collider-component@3.1.0/dist/aframe-aabb-collider-component.min.js"></script>
     <title>Modeling</title>
-</head>
-<body>
-    <a-scene>
-        <!-- Objetos -->
-        <a-assets>
+  </head>
+  <body>
+  <!-- ===================== -->
+  <a-scene arjs="debugUIEnabled: false;">
+  <!-- Light =========================================================== --> 
+   
+    <a-entity light="type: ambient; color: #FF; intensity: 0.2" position="-1 1 0"></a-entity>  
+    <a-entity light="type: directional; angle: 10; intensity: 0.5" position="1 13 -6" rotation="250 0 0" decay="0.5"></a-entity>
+   
+   <a-entity light="type: spot; angle: 15; intensity: 0.8; penumbra: 0.5" position="1.3 1 10" rotation="5 0 0" ></a-entity>
+    
+    <p> contador: <span id="count">0</span></p>
+<!-- Modelos 3D ------------------------------------------------------------------>      
+    <a-gltf-model id ="peca1" src="https://raw.githubusercontent.com/KurtRodrigues/Project01/master/modelos%203D%20Porta%20avi%C3%A3o/1.2.gltf" shadow="cast: true" position = "0 0 0" rotation="0 0 0" scale="1 1 1"> </a-gltf-model>
+    
+    <a-gltf-model id ="peca2" src="https://raw.githubusercontent.com/KurtRodrigues/Project01/master/modelos%203D%20Porta%20avi%C3%A3o/2.2.gltf" position = "0 0 0" rotation="0 0 0" scale="1 1 1" visible="false" shadow="cast: true"> </a-gltf-model>
+    
+    <a-gltf-model id ="peca3" src="https://raw.githubusercontent.com/KurtRodrigues/Project01/master/modelos%203D%20Porta%20avi%C3%A3o/3.2.gltf" position = "0 0 0" rotation="0 0 0" scale="1 1 1" visible="false" shadow="cast: true"> </a-gltf-model>
+    
+    <a-gltf-model id ="peca4" src="https://raw.githubusercontent.com/KurtRodrigues/Project01/master/modelos%203D%20Porta%20avi%C3%A3o/4.2.gltf" position = "0 0 0" rotation="0 0 0" scale="1 1 1" visible="false" shadow="cast: true"> </a-gltf-model>
 
-        </a-assets>
 
-        <!-- Ambiente -->
-            
+<!----------------------------------- -->     
+<a-assets > 
+     
+   <a-asset-item id ="tablado" src="https://raw.githubusercontent.com/KurtRodrigues/Project01/master/modelos%203D%20Porta%20avi%C3%A3o/tablado3-3.gltf" position = "0 0 0" rotation="0 0 0" scale="1 1 1" visible="true" shadow="cast: true"> 
+   </a-asset-item>
+      
+   <a-asset-item id ="hangar" src="https://raw.githubusercontent.com/KurtRodrigues/Project01/master/modelos%203D%20Porta%20avi%C3%A3o/Hangar.0.5.gltf" position = "0 0 0" rotation="0 0 0" scale="1 1 1" visible="true"  shadow="cast:true"> </a-asset-item>
+
+</a-assets>
+<!----------------------------------- -->        
+      
+<a-gltf-model src="#tablado"> </a-gltf-model>
+<a-gltf-model src="#hangar"> </a-gltf-model> 
+    
+ <!-- Decoração -->
+     <a-gltf-model id ="trolley" src="https://raw.githubusercontent.com/KurtRodrigues/Project01/master/modelos%203D%20Porta%20avi%C3%A3o/trolley.01.gltf" position = "0 0 0" rotation="0 0 0" scale="1 1 1" visible="true" shadow="cast: true" > </a-gltf-model>
+    
+     <a-gltf-model id ="portatrolley" src="https://raw.githubusercontent.com/KurtRodrigues/Project01/master/modelos%203D%20Porta%20avi%C3%A3o/PORTAtrolley.01.gltf" position = "0 0 0" rotation="0 0 0" scale="1 1 1" visible="true"  shadow="cast: true"> </a-gltf-model>
+    
+ <!-- Luminarias -->   
+    <a-gltf-model id ="Lampada1" src="https://raw.githubusercontent.com/KurtRodrigues/Project01/master/modelos%203D%20Porta%20avi%C3%A3o/lampara1.gltf" position = "0 0 0" rotation="0 0 0" scale="1 1 1" visible="true" shadow="cast: true"> </a-gltf-model>
+    
+    <a-gltf-model id ="Lampada2" src="https://raw.githubusercontent.com/KurtRodrigues/Project01/master/modelos%203D%20Porta%20avi%C3%A3o/lampara2.gltf" position = "0 0 0" rotation="0 0 0" scale="1 1 1" visible="true" shadow="cast: true"> </a-gltf-model>
+    
+    <a-gltf-model id ="Lampada3" src="https://raw.githubusercontent.com/KurtRodrigues/Project01/master/modelos%203D%20Porta%20avi%C3%A3o/lampara3.gltf" position = "0 0 0" rotation="0 0 0" scale="1 1 1" visible="true" shadow="cast: true"> </a-gltf-model>
+    
+    <a-gltf-model id ="Lampada4" src="https://raw.githubusercontent.com/KurtRodrigues/Project01/master/modelos%203D%20Porta%20avi%C3%A3o/lampara4.gltf" position = "0 0 0" rotation="0 0 0" scale="1 1 1" visible="true" shadow="cast: true"> </a-gltf-model>
+    
+    <a-gltf-model id ="Lampada5" src="https://raw.githubusercontent.com/KurtRodrigues/Project01/master/modelos%203D%20Porta%20avi%C3%A3o/lampara5.gltf" position = "0 0 0" rotation="0 0 0" scale="1 1 1" visible="true" shadow="cast: true"> </a-gltf-model>
+    
+ <!-- ---------------------------------------------------------------------------------->
+  <!-- CURSOR -->
+  <a-entity camera look-controls wasd-controls position="0 1 2">
+    <a-entity cursor="fuse: true; fuseTimeout: 500"
+              position="0 0 -1"
+              geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
+              material="color: black; shader: flat">
+    </a-entity>
+  </a-entity>
+  
+    <a-entity id="box" cursor-listener geometry="primitive: box" material="color: blue"position="3 1 0"></a-entity>
+
+  <!-- ------------------------------------------------------------------>
+     <!-- fisic button -->
+    <a-entity class="clickable" id="tras" geometry="primitive: sphere" material="color: #ffad99" position="-1.0 0.6 1.2" scale="0.1 0.1 0.1"> 
+      </a-entity>
+      
+      <a-entity class="clickable" id="frente" geometry="primitive: sphere" material="color: #ffad99" position="1.2 0.6 1.2" scale="0.1 0.1 0.1" event-set__enter="_event: mouseenter; visible=true"> </a-entity>
+<!--=============================================================-->    
     </a-scene>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
+
