--- a/view/visualization/index.html
+++ b/view/visualization/index.html
@@ -15,18 +15,26 @@
         <a-assets>
             <a-asset-item id="hangar" src="../../models/hangar/scene.gltf"></a-asset-item>
             <a-asset-item id="pilar" src="../../models/pilar/scene.gltf"></a-asset-item>
-            <a-asset-item id="door" src="../../models/door/scene.gltf"></a-asset-item>
+            <a-asset-item id="door" src="https://raw.githubusercontent.com/KurtRodrigues/Project01/master/modelos%203D%20Porta%20avi%C3%A3o/1.2.gltf"></a-asset-item>
         </a-assets>
 
         <!-- Ambiente -->
-        <a-entity environment="preset: forest; ground: flat; dressingAmount: 8; fog: 0.5; lightPosition: -2 5 -2" scale="0.5 0.5 0.5"position="0 0 0"></a-entity>
-
+        <a-entity environment="preset: japan; ground: flat; dressingAmount: 1; fog: 0.1; lightPosition: -2 5 -2" scale="0.5 0.5 0.5"position="0 0 0"></a-entity>
+        <!-- iluminação -->
+        <a-entity light="type: ambient; intensity: 0.3;" id="light1" visible="True"></a-entity>
+        <a-entity light="type: directional;
+                   castShadow: true;
+                   intensity: 0.4;
+                   shadowCameraVisible: false;
+                   shadowRadius:1.5"
+            
+            scale="0.76 0.66 0.83"
+            position="-2.92 -0.26 6.82"
+            id="light2"> </a-entity>
         <!-- Modelos -->
-        <a-entity gltf-model="#door" scale="0.3 0.3 0.3" position="0 2.7 -5" rotation="-12 -42 0 " color="white"></a-entity>
-        <a-entity gltf-model="#pilar" scale="2 2 1" position="0 0 -5"></a-entity>
+        <a-entity gltf-model="#door" scale="1.6 1.6 1.6" position="0 0.4 -5" rshadow="cast: true" rotation="0 0 0" ></a-entity>
+        <a-entity gltf-model="#pilar" scale="3 3 2" position="0 0 -5"></a-entity>
         <a-entity gltf-model="#hangar" scale="0.001 0.001 0.001" position="-7.6 -0.15 3"></a-entity>
-        <a-box id=peca_1 position="4 2 -5"></a-box>
-        <a-box id=peca_2 position="-3 2 -5"></a-box>
         
         <!-- Crosshair -->
         <a-camera position="0 2 0">
