--- a/view/visualization/scene.html
+++ b/view/visualization/scene.html
@@ -41,7 +41,7 @@
             position="2.92 -0.26 6.82"
             id="light2"> </a-entity>
             <!-- Modelos -->
-            <a-entity gltf-model="#door" scale="1.6 1.6 1.6" position="0 0.4 -5" rshadow="cast: true" rotation="0 0 0" ></a-entity>
+            <a-entity id="door" gltf-model="#door" scale="1.6 1.6 1.6" position="0 0.4 -5" rshadow="cast: true" rotation="0 0 0" ></a-entity>
             <a-entity gltf-model="#pilar" scale="3 3 2" position="0 0 -5"></a-entity>
             <a-entity gltf-model="#hangar" scale="0.001 0.001 0.001" position="-7.6 -0.15 3"></a-entity>
             
